name: haskell-chess
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: Your Name
maintainer: you@example.com
category: Development
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game
                     , Behaviour.ManualMove
                     , Types
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable haskell-chess
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010